<resources>
    <string name="app_name">Flight Scheduler</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Flight Scheduler</string>
    <string name="nav_header_subtitle">Powered by Amadeus API</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="text_flight_offers">&#160;&#160;&#160;FLIGHT OFFERS&#160;&#160;&#160;</string>
    <string name="text_hotel_offers">&#160;&#160;&#160;HOTEL &#160;OFFERS&#160;&#160;&#160;</string>
    <string name="text_flight_offers_lower">Flight Offers</string>
    <string name="text_hotel_offers_lower">Hotel Offers</string>
    <string name="text_itinerary_metrics">Itinerary Price Metrics</string>
    <string name="text_saved_offers">Saved Offers</string>
    <string name="text_preferences">Preferences</string>
    <string name="home_second">Home Second</string>
    <string name="text_no_internet_connection">No Internet Connection !</string>
    <string name="text_connect_timeout">Connection Timed Out !</string>
    <string name="text_update_app">Please Update Your Application</string>
    <string name="text_server_maintain">Server maintaining, please try again later..</string>
    <string name="text_unknown_error">Unknown Error..</string>
    <string name="no_data_to_display">text_no_data_to_displa</string>
    <string name="reload">text_reload</string>
    <string name="text_flight_status">Flight Status</string>
    <string name="text_seat_map">Seat Map</string>
    <string name="text_delay_prediction">Delay Prediction</string>
    <string name="text_round_trip">Round Trip</string>
    <string name="text_one_way">One Way</string>
    <string name="text_flight_search">Flight Search</string>
    <string name="text_to">To</string>
    <string name="text_destination">Destination</string>
    <string name="text_temp_date">23 Oct 2021</string>
    <string name="text_one">1</string>
    <string name="text_adult">Adult</string>
    <string name="text_search_flights">Search Flights</string>
    <string name="text_origin">Origin</string>
    <string name="text_from">From</string>
    <string name="text_child">Child</string>
    <string name="text_zero">0</string>
    <string name="text_date_parser_format">yyyy-MM-dd</string>
    <string name="text_date_formatter">dd MMM yyyy</string>
    <string name="text_disclaimer">Disclaimer : This application only provides search results regarding Amadeus Self Service API. No online transaction is allowed for the application. For more info, please contact info@amadeus.com</string>
    <string name="text_flight_date">Flight Date</string>
    <string name="text_return_date">Return Date</string>
    <string name="text_missing_date">Please select the return date.</string>
    <string name="text_passengers">Passenger(s)</string>
    <string name="text_no_flight_found">No flight found</string>
    <string name="text_select">Select</string>
    <string name="text_reset">Reset</string>
    <string name="text_flight_results">Flight Results</string>
    <string name="text_flight_details">Flight Details</string>
    <string name="text_end_flight">End of the flight.</string>
    <string name="text_return_segments">Return segments..</string>
    <string name="text_cabin_code">Cabin Code :</string>
    <string name="text_fare_basis">Fare Basis :</string>
    <string name="text_class_Code">Class Code :</string>
    <string name="text_main_cabin_full_flexible">Main Cabin Full Flexible</string>
    <string name="text_date_formatter_day">EEEE, dd MMM yyyy</string>
    <string name="text_non_applicable">N/A</string>
    <string name="ok">OK</string>
    <string name="text_pricing_info">"Pricing Info"</string>
    <string name="text_rooms">Rooms</string>
    <string name="text_check_in_date">Check In Date</string>
    <string name="text_check_out_date">Check Out Date</string>
    <string name="text_hotel_search">Hotel Search</string>
    <string name="text_search_hotels">Search Hotels</string>
    <string name="text_city">City</string>
    <string name="text_hotel_results">Hotel Results</string>
    <string name="text_hotel_details">Hotel Details</string>
    <string name="text_rating">Rating</string>
    <string name="read_more">Read More..</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Praesent consectetur viverra dolor non rutrum. Donec quis pharetra leo. Praesent erat neque, maximus id rutrum eu, accumsan vel felis. Proin finibus lorem in nulla posuere varius. Nam sit amet risus sollicitudin, laoreet nulla quis, lobortis quam. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Integer posuere erat vel volutpat dapibus. Mauris a varius arcu, eget eleifend ante. Etiam ultricies erat eu augue sodales, nec vulputate nisl rutrum. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus egestas, urna vitae cursus porttitor, arcu odio tempus sapien, sed fringilla diam purus at lectus.</string>
    <string name="text_location">Location</string>
    <string name="text_amenities">Amenities</string>
    <string name="text_description">Description</string>
    <string name="text_start_date">Start Date :</string>
    <string name="text_end_date">End Date :</string>
    <string name="text_refund_deadline">Refund Deadline :</string>
    <string name="text_permission_required">You need to accept permission in order to continue..</string>
    <string name="text_price">Price :</string>
    <string name="text_bookable_seats">Bookable Seats :</string>
    <string name="text_last_ticketing_date">Last Ticketing Date :</string>
    <string name="text_source">Source :</string>
    <string name="no_aircraft_found">(Aircraft info not provided)</string>
    <string name="text_from_city_center">from city center..</string>
    <string name="text_details">Details</string>
    <string name="no_internet_connection">No Internet Connection</string>
    <string name="connect_timeout">Connection Timeout</string>
    <string name="force_update_app">Update Required</string>
    <string name="unknown_error">Unknown Error</string>
    <string name="server_maintain_message">Server Maintain</string>
    <string name="text_loading">Please wait.. \n We\'re loading the best offers.</string>
    <string name="OK">OK</string>
    <string name="text_seat_map_info">Seat Map Info</string>
    <string name="text_available_seat">Available Seat</string>
    <string name="text_occupied_seat">Occupied Seat</string>
    <string name="text_selected_seat">Selected Seat</string>
    <string name="text_booked_seat">Booked Seat</string>
    <string name="text_carrier">"Carrier : "</string>
    <string name="language">Language</string>
    <string name="sort_options">Sort By</string>
    <string name="text_flight_leg">Flight Leg</string>
    <string name="text_display_seat_map">Display Seat Map</string>
    <string name="text_display_Seat_map">Display Seat Map</string>
    <string name="text_seat_map_button">You can display the Seat Map info by selecting the flight segments.</string>
    <string name="text_departure_date">Departure Date</string>
    <string name="text_departure_time">Departure Time</string>
    <string name="text_arrival_time">Arrival Time</string>
    <string name="text_carrier_single">Carrier Airline</string>
    <string name="text_flight_number">Flight Number</string>
    <string name="text_display_prediction_results">Display Results</string>
    <string name="text_prediction_search">Delay Prediction</string>
    <string name="text_prediction_info">Prediction Info</string>
    <string name="text_search_metrics">Retrieve Metrics</string>
    <string name="select_flight_date">Select Flight Date</string>
    <string name="text_metric_flight_date">Flight Date (Should not be future date)</string>
    <string name="yyyy_mm_dd">YYYY-MM-DD</string>
    <string-array name="label_calendar_en">
        <item name="1">Mon</item>
        <item name="2">Tue</item>
        <item name="3">Wed</item>
        <item name="4">Thu</item>
        <item name="5">Fri</item>
        <item name="6">Sat</item>
        <item name="7">Sun</item>
    </string-array>
</resources>
