<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.java.flightscheduler.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home">
    </fragment>

    <fragment
        android:id="@+id/nav_flight_search"
        android:name="com.java.flightscheduler.ui.flight.flightsearch.FlightSearchFragment"
        android:label="@string/text_flight_offers_lower"
        tools:layout="@layout/fragment_flight_offers" />

    <fragment
        android:id="@+id/nav_hotel_search"
        android:name="com.java.flightscheduler.ui.hotelsearch.HotelSearchFragment"
        android:label="@string/text_hotel_offers_lower"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_itinerary_metrics"
        android:name="com.java.flightscheduler.ui.itinerarymetrics.ItineraryMetricsFragment"
        android:label="@string/text_itinerary_metrics"
        tools:layout="@layout/fragment_itinerary_metrics" />

    <fragment
        android:id="@+id/nav_flight_status"
        android:name="com.java.flightscheduler.ui.flightstatus.FlightStatusFragment"
        android:label="@string/text_flight_status"
        tools:layout="@layout/fragment_flight_status" />

    <fragment
        android:id="@+id/nav_seat_map"
        android:name="com.java.flightscheduler.ui.seatmap.SeatMapFragment"
        android:label="@string/text_seat_map"
        tools:layout="@layout/fragment_seat_map" />

    <fragment
        android:id="@+id/nav_delay_prediction"
        android:name="com.java.flightscheduler.ui.delayprediction.DelayPredictionFragment"
        android:label="@string/text_delay_prediction"
        tools:layout="@layout/fragment_delay_prediction" />

    <fragment
        android:id="@+id/nav_flight_results"
        android:name="com.java.flightscheduler.ui.flight.flightresults.FlightResultsFragment"
        android:label="@string/text_flight_results"
        tools:layout="@layout/fragment_flight_list" />
</navigation>