<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">
    <data class="FragmentFlightDetailBinding">
        <variable
            name="flightOfferHeader"
            type="com.java.flightscheduler.data.model.flight.FlightOffer" />
    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_gravity="center"
        android:background="@color/grey_white_1000"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:background="@color/red_google"
            android:id="@+id/layout_flight_detail_info"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="match_parent"
            android:layout_height="@dimen/flight_detail_header_dimen">
            <TextView
                android:id="@+id/txt_flight_detail_source_text"
                android:textSize="15sp"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginStart="@dimen/margin_medium"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toLeftOf="@+id/txt_flight_detail_source"
                app:layout_constraintTop_toTopOf="parent"
                android:textAlignment="viewStart"
                android:gravity="start"
                android:text="@string/text_source"
                android:textColor="@color/grey_white_1000"/>
            <TextView
                android:text="@{flightOfferHeader.source.toString() + ` Global distribution system`}"
                android:textSize="15sp"
                android:id="@+id/txt_flight_detail_source"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginStart="@dimen/margin_x_small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintLeft_toRightOf="@+id/txt_flight_detail_source_text"
                app:layout_constraintTop_toTopOf="parent"
                android:textAlignment="viewStart"
                android:gravity="start"
                android:textColor="@color/grey_white_1000" />

            <TextView
                android:id="@+id/txt_flight_detail_ticketing_date_text"
                android:textSize="15sp"
                android:textColor="@color/grey_white_1000"
                android:text="@string/text_last_ticketing_date"
                android:textAlignment="viewStart"
                android:gravity="start"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_medium"
                app:layout_constraintTop_toBottomOf="@+id/txt_flight_detail_source"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                tools:text="15 May 2021"
                app:setDateParserText="@{` ` +flightOfferHeader.lastTicketingDate.toString()}"
                android:id="@+id/txt_flight_detail_ticketing_date"
                android:textSize="15sp"
                android:textColor="@color/grey_white_1000"
                android:textAlignment="viewStart"
                android:gravity="start"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_x_small"
                app:layout_constraintLeft_toRightOf="@+id/txt_flight_detail_ticketing_date_text"
                app:layout_constraintTop_toBottomOf="@+id/txt_flight_detail_source"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>

            <TextView
                android:id="@+id/txt_flight_detail_seat_count_text"
                android:textSize="15sp"
                android:textColor="@color/grey_white_1000"
                android:text="@string/text_bookable_seats"
                android:textAlignment="viewStart"
                android:gravity="start"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_medium"
                app:layout_constraintTop_toBottomOf="@+id/txt_flight_detail_ticketing_date"
                app:layout_constraintLeft_toLeftOf="parent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <TextView
                tools:text="9 Seats available"
                android:text="@{` ` +String.valueOf(flightOfferHeader.numberOfBookableSeats) + ` Seats available`}"
                android:id="@+id/txt_flight_detail_seat_count"
                android:textSize="15sp"
                android:textColor="@color/grey_white_1000"
                android:textAlignment="viewStart"
                android:gravity="start"
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_x_small"
                app:layout_constraintLeft_toRightOf="@+id/txt_flight_detail_seat_count_text"
                app:layout_constraintTop_toBottomOf="@+id/txt_flight_detail_ticketing_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"/>
            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_marginTop="@dimen/margin_small"
                android:layout_marginStart="@dimen/margin_medium"
                app:layout_constraintTop_toBottomOf="@+id/txt_flight_detail_seat_count"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <TextView
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    android:textStyle="bold"
                    android:id="@+id/txt_flight_detail_price_text"
                    android:textSize="19sp"
                    android:textColor="@color/grey_white_1000"
                    android:text="@string/text_price"
                    android:textAlignment="viewStart"
                    android:gravity="start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <TextView
                    android:text="@{ ` ` + flightOfferHeader.price.total + ` ` + flightOfferHeader.price.currency}"
                    tools:text=" 299.99 €"
                    app:layout_constraintLeft_toRightOf="@+id/txt_flight_detail_price_text"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    android:textStyle="bold"
                    android:id="@+id/txt_flight_detail_price"
                    android:textSize="19sp"
                    android:textColor="@color/grey_white_1000"
                    android:textAlignment="viewStart"
                    android:gravity="start"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:paddingBottom="@dimen/flight_detail_header_dimen_extended"
            android:id="@+id/rv_flight_detail"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            tools:listitem="@layout/item_flight_detail"
            app:layout_constraintTop_toBottomOf="@+id/layout_flight_detail_info"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
