<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:background="@color/grey_white_1000"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.flightsearch.FlightSearchFragment"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <TextView
        android:id="@+id/txt_flight_search"
        app:layout_constraintBottom_toTopOf="@+id/rg_flight_options"
        app:layout_constraintTop_toTopOf="parent"
        android:textSize="26sp"
        android:textColor="@color/grey_black_1000"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:layout_marginStart="@dimen/fab_margin"
        android:layout_marginLeft="@dimen/fab_margin"
        android:textStyle="normal"
        android:text="@string/text_flight_search"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <RadioGroup
        app:layout_constraintTop_toBottomOf="@+id/txt_flight_search"
        android:id="@+id/rg_flight_options"
        android:layout_margin="@dimen/activity_horizontal_margin"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <androidx.appcompat.widget.AppCompatRadioButton
            android:textSize="16sp"
            android:button="@android:color/transparent"
            android:background="@drawable/button_selector"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textColor="@drawable/text_selector"
            android:text="@string/text_one_way"
            android:id="@+id/btn_flight_one_way"
            app:layout_constraintRight_toLeftOf="@+id/btn_flight_roundtrip"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="0dp"
            android:layout_height="@dimen/flight_search_toggle_dimen"/>

        <androidx.appcompat.widget.AppCompatRadioButton
            android:checked="true"
            android:textSize="16sp"
            android:button="@android:color/transparent"
            android:background="@drawable/button_selector"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:textColor="@drawable/text_selector"
            android:text="@string/text_round_trip"
            android:id="@+id/btn_flight_round_trip"
            app:layout_constraintRight_toLeftOf="@+id/btn_flight_roundtrip"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_width="0dp"
            android:layout_height="@dimen/flight_search_toggle_dimen"/>
    </RadioGroup>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_flight_search_route_main"
        app:layout_constraintTop_toBottomOf="@+id/rg_flight_options"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:id="@+id/layout_flight_search_route"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:background="@drawable/button_unselected_state_holder"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="0dp"
                android:layout_height="@dimen/flight_search_view_dimen"/>

            <TextView
                android:layout_marginTop="@dimen/margin_medium"
                android:id="@+id/tv_flight_search_from"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="From"
                android:textSize="14sp"
                android:textColor="@color/grey_700"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/img_flight_search_origin"/>

            <com.google.android.material.textfield.TextInputEditText
                android:background="@android:color/transparent"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:id="@+id/edt_flight_search_origin"
                app:layout_constraintLeft_toRightOf="@+id/img_flight_search_origin"
                app:layout_constraintTop_toBottomOf="@+id/tv_flight_search_from"
                android:text="United States"
                android:textColor="#202040"
                android:textSize="18sp"
                android:inputType="text"
                android:layout_height="wrap_content"/>

            <ImageView
                android:src="@drawable/icon_flight_from"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:padding="@dimen/margin_medium"
                android:layout_width="@dimen/flight_search_toggle_dimen"
                android:layout_height="@dimen/flight_search_toggle_dimen"
                android:id="@+id/img_flight_search_origin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_margin="@dimen/activity_vertical_margin"
            android:id="@+id/layout_flight_search_route_destination"
            app:layout_constraintTop_toBottomOf="@+id/layout_flight_search_route"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <View
                android:background="@drawable/button_unselected_state_holder"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="0dp"
                android:layout_height="@dimen/flight_search_view_dimen"/>

            <TextView
                android:layout_marginTop="@dimen/margin_medium"
                android:id="@+id/tv_flight_search_to"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:text="To"
                android:textSize="14sp"
                android:textColor="@color/grey_700"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toRightOf="@+id/img_flight_search_destination"/>

            <com.google.android.material.textfield.TextInputEditText
                android:background="@android:color/transparent"
                android:layout_marginTop="@dimen/margin_medium"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_width="wrap_content"
                android:id="@+id/edt_flight_search_destination"
                app:layout_constraintLeft_toRightOf="@+id/img_flight_search_destination"
                app:layout_constraintTop_toBottomOf="@+id/tv_flight_search_to"
                android:text="London"
                android:textColor="#202040"
                android:textSize="18sp"
                android:inputType="text"
                android:layout_height="wrap_content"/>

            <ImageView
                android:src="@drawable/icon_flight_to"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                android:padding="@dimen/margin_medium"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_width="@dimen/flight_search_toggle_dimen"
                android:layout_height="@dimen/flight_search_toggle_dimen"
                android:id="@+id/img_flight_search_destination"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_width="@dimen/flight_search_toggle_dimen"
            android:layout_marginRight="@dimen/margin_xlarge"
            android:layout_marginEnd="@dimen/margin_xlarge"
            android:layout_height="@dimen/flight_search_toggle_dimen">
            <ImageView
                android:padding="10dp"
                android:background="@drawable/round_button"
                android:src="@drawable/icon_flight_change"
                android:layout_width="match_parent"
                android:layout_height="match_parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_margin="@dimen/activity_vertical_margin"
        android:id="@+id/layout_flight_one_way_picker"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:background="@drawable/button_unselected_state_holder"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_width="0dp"
            android:layout_height="@dimen/flight_search_view_dimen"/>

        <TextView
            android:layout_marginTop="@dimen/margin_medium"
            android:id="@+id/tv_flight_search_to"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:text="To"
            android:textSize="14sp"
            android:textColor="@color/grey_700"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toRightOf="@+id/img_flight_search_destination"/>

        <com.google.android.material.textfield.TextInputEditText
            android:background="@android:color/transparent"
            android:layout_marginTop="@dimen/margin_medium"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"
            android:layout_width="wrap_content"
            android:id="@+id/edt_flight_search_destination"
            app:layout_constraintLeft_toRightOf="@+id/img_flight_search_destination"
            app:layout_constraintTop_toBottomOf="@+id/tv_flight_search_to"
            android:text="London"
            android:textColor="#202040"
            android:textSize="18sp"
            android:inputType="text"
            android:layout_height="wrap_content"/>

        <ImageView
            android:src="@drawable/icon_flight_to"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            android:padding="@dimen/margin_medium"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_width="@dimen/flight_search_toggle_dimen"
            android:layout_height="@dimen/flight_search_toggle_dimen"
            android:id="@+id/img_flight_search_destination"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginLeft="@dimen/activity_horizontal_margin"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>